Increase HTTP connection pools and set JVM mem size
Some initial performance tuning. Since we are essentially just making a bunch of connections to the server and waiting for results, the more connections we can maintain the more transactions we will process.